--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,927 @@
-.header-title {
-  color: red;
+@import url("https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+*, *::after, *::before {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  color: black;
+  font-weight: 400;
+  line-height: 2;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+  overflow-x: hidden;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  -webkit-transition: all;
+  transition: all;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+header .header-telephone, header hr {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  header .header-telephone, header hr {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+  }
+  header .header-telephone::after, header hr::after {
+    content: "";
+    position: absolute;
+    background-color: grey;
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+  }
+}
+
+header .logo {
+  width: 100%;
+  max-width: 142px;
+}
+
+header .hero-logos {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15px 15px;
+}
+
+@media screen and (min-width: 768px) {
+  header .hero-logos .hamburger {
+    display: none;
+    cursor: pointer;
+  }
+}
+
+header .hero-wrapper {
+  padding: 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+  header .hero-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.hero {
+  width: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("https://websitedemos.net/real-estate-agency-04/wp-content/uploads/sites/867/2021/05/hero-01-free-img.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("https://websitedemos.net/real-estate-agency-04/wp-content/uploads/sites/867/2021/05/hero-01-free-img.jpg");
+  background-repeat: no-repeat;
+  background-position: 49px 0;
+  background-size: cover;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-position: 118px 0;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero {
+    background-position: 166px 0;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .hero {
+    background-position: 207px 0;
+  }
+}
+
+.hero .hero-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 342px;
+  color: #fff;
+}
+
+@media screen and (min-width: 768px) {
+  .hero .hero-container {
+    min-height: 342px;
+    max-width: 544px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero .hero-container {
+    min-height: 342px;
+    max-width: 575px;
+  }
+}
+
+.hero .hero-sub-wrap {
+  width: 100%;
+  padding: 70px 0 20px 50px;
+  text-align: right;
+  margin-top: 50px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero .hero-sub-wrap {
+    text-align: center;
+    padding: 149px 0 220px;
+  }
+}
+
+.hero .hero-title {
+  font-weight: bold;
+  font-size: 36px;
+  width: 100%;
+  color: #fff;
+  line-height: 1;
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero .hero-title {
+    font-size: 60px;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .hero .hero-title {
+    font-size: 90px;
+    width: 97%;
+  }
+}
+
+.hero .hero-description {
+  font-size: 20px;
+  color: #fff;
+  line-height: 1.5;
+  font-family: "Yeseva One", cursive;
+}
+
+@media screen and (min-width: 768px) {
+  .hero .hero-description {
+    font-size: 25px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .hero .hero-description {
+    padding: 0% 25%;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .hero .hero-description {
+    padding: 0% 29%;
+  }
+}
+
+.nav {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    display: block;
+  }
+}
+
+.nav .nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 36px;
+}
+
+.nav .nav-list .nav-item {
+  list-style-type: none;
+}
+
+.nav .nav-list .nav-link {
+  text-decoration: none;
+  color: #000;
+  font-weight: 900;
+}
+
+@media screen and (min-width: 768px) {
+  .btnfree {
+    padding: 30px 0 0;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .btnfree {
+    padding: 30px 0 0;
+  }
+}
+
+.hero-btn {
+  padding: 18px 30px;
+  background: #fff;
+  color: #000;
+  border: none;
+  margin-top: 16px;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.hero-btn:hover {
+  background: #000;
+  color: #fff;
+}
+
+.form-parallax-btn {
+  font-size: 10px;
+  font-weight: 700;
+  color: #fff;
+  background: gray;
+  padding: 19px 41px;
+  border: none;
+  cursor: pointer;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.form-parallax-btn:hover {
+  color: #fff;
+  background: #000;
+}
+
+@media screen and (min-width: 768px) {
+  .about {
+    width: 100%;
+    background-image: url("../images/hero-bg-two.png");
+    background-repeat: no-repeat;
+    background-position: -287px 0;
+    background-size: cover;
+    margin-top: -87px;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .about {
+    width: 100%;
+    background-position: -14px 0;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .about {
+    width: 100%;
+    background-position: 0;
+  }
+}
+
+.about .about-container {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 60px 20px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .about .about-container .about-sub-wrap {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.about .about-container .about-sub-wrap .about-title {
+  font-size: 42px;
+  margin-bottom: 35px;
+  display: block;
+  position: relative;
+  padding-bottom: 6px;
+  font-family: "Yeseva One", cursive;
+}
+
+@media screen and (min-width: 768px) {
+  .about .about-container .about-sub-wrap .about-title {
+    font-size: 50px;
+  }
+}
+
+.about .about-container .about-sub-wrap .about-title::after {
+  content: "";
+  position: absolute;
+  background-color: grey;
+  width: 50px;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .about .about-container .about-inner-wrap {
+    padding-top: 91px;
+  }
+}
+
+.about .about-container .about-sub-title {
+  padding: 0 0 10px;
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+.about .about-container .about-caption {
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 1.6em;
+  font-size: 13px;
+  line-height: 27px;
+}
+
+@media screen and (min-width: 768px) {
+  .about .about-container .about-caption {
+    width: 100%;
+    max-width: 293px;
+  }
+}
+
+.about .about-container .about-read-more {
+  font-size: 10px;
+  text-decoration: none;
+  font-weight: "Montserrat", sans-serif;
+  color: #1a9395;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+.about .about-container .about-read-more:hover {
+  color: #000;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.about .about-image {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .about .about-image {
+    display: block;
+  }
+}
+
+.services {
+  margin-bottom: 100px;
+}
+
+@media screen and (min-width: 768px) {
+  .services {
+    margin-bottom: 139px;
+  }
+}
+
+.services .service-wrapper {
+  margin-top: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .services .service-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 135px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .services .service-wrapper .service-col-right {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .services .service-wrapper .service-col-left {
+    padding: 0 30px;
+  }
+}
+
+.services .service-wrapper .service-title {
+  margin-bottom: 40px;
+  font-size: 36px;
+  font-weight: bold;
+  display: block;
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .services .service-wrapper .service-title {
+    line-height: 1.2;
+    font-size: 50px;
+  }
+}
+
+.services .service-wrapper .service-title::after {
+  content: "";
+  position: absolute;
+  background-color: grey;
+  width: 50px;
+  height: 2px;
+  bottom: -8px;
+  left: 0;
+}
+
+.services .service-wrapper .service-item-title {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Yeseva One", cursive;
+}
+
+.services .service-wrapper .service-list {
+  list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+  .services .service-wrapper .service-list {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+  }
+}
+
+.services .service-wrapper .service-item, .services .service-wrapper p {
+  margin-bottom: 22px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  padding-right: 19px;
+}
+
+@media screen and (min-width: 768px) {
+  .services .service-wrapper .service-item, .services .service-wrapper p {
+    margin-bottom: 22px;
+  }
+}
+
+.services .service-wrapper .service-read {
+  background: none;
+  border: none;
+  font-size: 10px;
+  font-weight: bold;
+  color: grey;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+
+.services .service-wrapper .service-read:hover {
+  color: #000;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.form-paralax {
+  min-height: 500px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url("../images/hero-bg-one.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/hero-bg-one.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 13px;
+}
+
+.form-paralax .form-paralax-container {
+  background-color: #fff;
+  min-height: inherit;
+  padding: 49px;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-shadow: 2px 5px 30px rgba(0, 0, 0, 0.4);
+          box-shadow: 2px 5px 30px rgba(0, 0, 0, 0.4);
+  position: relative;
+  top: 80px;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
+@media screen and (min-width: 768px) {
+  .form-paralax .form-paralax-container {
+    max-width: 500px;
+  }
+}
+
+.form-paralax .form-paralax-container .form-parallax-title {
+  line-height: 0.9;
+  margin-bottom: 54px;
+  padding: 12px;
+  font-size: 35px;
+  position: relative;
+  display: block;
+  text-align: center;
+  font-family: "Yeseva One", cursive;
+}
+
+@media screen and (min-width: 768px) {
+  .form-paralax .form-paralax-container .form-parallax-title {
+    font-size: 50px;
+  }
+}
+
+.form-paralax .form-paralax-container .form-parallax-title::after {
+  content: "";
+  position: absolute;
+  background-color: grey;
+  width: 50px;
+  height: 2px;
+  top: 85%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin-top: 30px;
+}
+
+.form-paralax .form-paralax-container input {
+  display: block;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid gray;
+  width: 100%;
+  background-color: #fff5f5;
+}
+
+.form-paralax .form-paralax-container .input-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+}
+
+.form-paralax .form-paralax-container .input-wrapper .input-col {
+  width: 100%;
+}
+
+.form-paralax .gap {
+  height: 200px;
+}
+
+.form-paralax textarea {
+  width: 100%;
+}
+
+.customers {
+  margin-bottom: 90px;
+}
+
+.customers .customers-wrapper {
+  margin-top: 170px;
+}
+
+.customers .customers-wrapper .customer-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  margin-bottom: 40px;
+  position: relative;
+  display: block;
+  line-height: 1.2;
+}
+
+@media screen and (min-width: 768px) {
+  .customers .customers-wrapper .customer-title {
+    font-size: 50px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .customers .customers-wrapper .customer-title {
+    font-size: 65px;
+  }
+}
+
+.customers .customers-wrapper .customer-title::after {
+  content: "";
+  position: absolute;
+  background-color: grey;
+  width: 50px;
+  height: 2px;
+  top: 85%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin-top: 38px;
+}
+
+.customers .customers-wrapper .customers-item-inner {
+  border: 1px solid;
+  border-color: #00000017;
+  padding: 30px 50px;
+}
+
+.customers .customers-wrapper .customer-text {
+  font-weight: 400;
+  line-height: 1.2;
+  font-family: "Yeseva One", cursive;
+  font-size: 21px;
+  line-height: 1.2;
+  margin-bottom: 20px;
+}
+
+.customers .customers-wrapper .customers-btn {
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.customers .customers-wrapper .customers-item {
+  margin-bottom: -16px;
+  margin-top: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .customers .customers-wrapper .customers-item {
+    padding: 10px;
+    text-align: center;
+  }
+}
+
+.customers .customers-wrapper .customer-quote-icon {
+  color: darkcyan;
+}
+
+.customers .customers-wrapper .customers-list {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .customers .customers-wrapper .customers-list {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 33.33% 33.33% 33.33%;
+        grid-template-columns: 33.33% 33.33% 33.33%;
+  }
+}
+
+.listings .list-wrapper {
+  padding: 125px 0 100px;
+}
+
+.listings .listing-title {
+  font-size: 36px;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  line-height: 37px;
+  font-family: "Yeseva One", cursive;
+  position: relative;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .listings .listing-title {
+    font-size: 50px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .listings .listing-title {
+    font-size: 65px;
+  }
+}
+
+.listings .listing-title::after {
+  content: "";
+  position: absolute;
+  background-color: grey;
+  width: 50px;
+  height: 2px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin-top: 59px;
+}
+
+.listings .listing-inner-wrapper {
+  text-align: center;
+  margin-top: 37px;
+}
+
+@media screen and (min-width: 768px) {
+  .listings .listing-inner-wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .listings .listing-inner-wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 33.33% 33.33% 33.33%;
+        grid-template-columns: 33.33% 33.33% 33.33%;
+  }
+}
+
+.listings .listing-inner-wrapper .list-box {
+  margin-bottom: 43px;
+}
+
+@media screen and (min-width: 768px) {
+  .listings .listing-inner-wrapper .list-box {
+    padding: 12px;
+  }
+}
+
+.listings .listing-inner-wrapper .list-box .list-box-title {
+  text-align: left;
+  font-size: 19px;
+  font-family: "Yeseva One", cursive;
+  line-height: 1.5;
+  margin-bottom: 23px;
+}
+
+.listings .listing-inner-wrapper .list-box .list-box-price {
+  text-align: left;
+  font-family: "Montserrat", sans-serif;
+  color: darkcyan;
+  font-size: 13px;
+}
+
+.site__footer {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("../images/hero-bg-one.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/hero-bg-one.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  bottom: 0;
+}
+
+.site__footer .footer-icons {
+  background-color: darkgray;
+  padding: 10px 10px;
+  border-radius: 30px;
+  margin-top: 103px;
+  color: #fff;
+}
+
+.site__footer .site__primary-footer {
+  text-align: center;
+}
+
+.site__footer .site__footer-copyright {
+  text-align: center;
+  display: block;
+  position: relative;
+  bottom: 31px;
+}
+
+.site__footer .site__footer-copyright::after {
+  content: "";
+  position: absolute;
+  background-color: darkcyan;
+  width: 100%;
+  height: 2px;
+  bottom: 60px;
+  left: 0;
+}
+
+.site__footer .widget__gettelephone {
+  color: #fff;
+  font-size: 35px;
+  font-weight: 400;
+  font-family: "Yeseva One", cursive;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  .site__footer .widget__gettelephone {
+    font-size: 50px;
+  }
+}
+
+.site__footer .site__nav-widget-title {
+  color: #fff;
+  text-decoration: underline;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.site__footer .site__menu-address {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Yeseva One", cursive;
+}
+
+.site__footer .copyright {
+  color: #fff;
+}
+
+.site__footer .site__menu-container {
+  margin-bottom: 90px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Yeseva One", cursive;
 }
 /*# sourceMappingURL=style.css.map */
