--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,3 +1,97 @@
-.header-title{
-    color: red;
+
+.hero {
+	width: 100%;
+	background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://websitedemos.net/real-estate-agency-04/wp-content/uploads/sites/867/2021/05/hero-01-free-img.jpg");
+	background-repeat: no-repeat;
+	background-position: 49px 0;
+	background-size: cover;
+
+    @media screen and (min-width: 768px) {
+	    background-position: 118px 0;
+        
+    }
+
+    @media screen and (min-width: 1024px) {
+	    background-position: 166px 0;
+        
+    }
+
+
+    @media screen and (min-width: 1366px) {
+        background-position: 207px 0;
+    }
+
+	.hero-container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		min-height: 342px;
+		color: #fff;
+
+        @media screen and (min-width: 768px) {
+            min-height: 342px;
+            max-width: 544px;
+        }
+        @media screen and (min-width: 1024px) {
+            min-height: 342px;
+            max-width: 575px;
+        }
+	}
+
+    .hero-sub-wrap {
+        width: 100%;
+        padding: 70px 0 20px 50px;
+        text-align: right;
+        margin-top: 50px;
+
+        @media screen and (min-width: 768px) {
+            text-align: center;
+            padding: 149px 0 220px;
+        }
+      }
+
+.hero-title {
+    font-weight: bold;
+    font-size: 36px;
+    width: 100%;
+    color: #fff;
+    line-height: 1;
+    margin-bottom: 15px;
+
+    @media screen and (min-width: 768px) {
+        font-size: 60px;
+        width: 100%;
+    }
+
+    @media screen and (min-width: 992px) {
+        font-size: 90px;
+        width: 97%;
+    }
 }
+
+	.hero-description {
+		font-size: 20px;
+        color: #fff;
+        line-height: 1.5;
+        font-family: $fontFamily;
+
+        @media screen and (min-width: 768px) {
+            font-size: 25px;
+        }
+
+        @media screen and (min-width: 992px) {
+            padding: 0% 25%;
+        }
+
+        @media screen and (min-width: 1366px) {
+            padding: 0% 29%;
+        }
+	}
+
+	}
+
+   
+
+
+
+
