--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+*,*::after,*::before{box-sizing: border-box;}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -22,7 +23,6 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-    font-family: $fontFamliy;
     color: black;
     font-weight: 400;
     line-height: 2;
