--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 header{
-    .header-telephone, hr {
+    .header-telephone{
         display: none;
 
         @media screen and (min-width: 768px) {
