--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,6 +1,8 @@
 $Color1: #000;
 $Color2: #fff;
 $Color3: rgb(26, 147, 149);
+$bodyBackgroundColor: #fdf2f2;
+$Color4: rgba(0, 0, 0, 0.75);
 $background2: #000;
 $background1: #fff;
 $background: grey;
