--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 @import './variable';
+@import './heroexclusive';
 @import './reset';
 @import './header';
 @import './hero';
@@ -11,6 +12,12 @@
 @import './service';
 @import './parallax';
 @import './customers';
+@import './rentals';
+@import './luxurybuilding';
+@import './neighborhood';
+@import './aboutpage';
+@import './blog';
+@import './contact';
 @import './body';
 @import './listbox';
 @import './footer';
