--- a/sass/_customers.scss
+++ b/sass/_customers.scss
@@ -20,6 +20,7 @@
 
             @media screen and (min-width: 1024px) {
               font-size: 65px;
+              padding: 0 25%;
             }
             &::after {
                 content: "";
