--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,6 @@
 
 .site__footer{
-    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('../images/hero-bg-one.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../images/taf-one.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -9,7 +9,7 @@
 
     .footer-icons {
         background-color: darkgray;
-        padding: 10px 10px;
+        padding: 5px 5px;
         border-radius: 30px;
         margin-top: 103px;
         color: #fff;
@@ -29,11 +29,15 @@
         &::after {
             content: "";
             position: absolute;
-            background-color: darkcyan;
+            background-color: rgb(114, 147, 147);
             width: 100%;
             height: 2px;
-            bottom: 60px;
+            bottom: 56px;
             left: 0;
+
+            @media screen and (min-width: 768px) {
+              bottom: 36px;
+            }
           }
       }
 
