--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,10 +1,11 @@
 
 .hero {
 	width: 100%;
-	background-image:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://websitedemos.net/real-estate-agency-04/wp-content/uploads/sites/867/2021/05/hero-01-free-img.jpg");
+	background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('../images/taf-one.jpg');
 	background-repeat: no-repeat;
 	background-position: 49px 0;
 	background-size: cover;
+    margin-top: -22px;
 
     @media screen and (min-width: 768px) {
 	    background-position: 118px 0;
