--- a/sass/_parallax.scss
+++ b/sass/_parallax.scss
@@ -1,6 +1,6 @@
 .form-paralax {
   min-height: 500px;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../images/hero-bg-one.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../images/taf-one.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
