--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,27 +1,46 @@
-header{
-    .header-telephone{
-        display: none;
+.telephone-section{
+    position: relative;
+    display: block;
 
+    &::after {
+        content: "";
+        position: absolute;
+        background-color: lightblue;
+        width: 100%;
+        height: 1px;
+        bottom: 0;
+        left: 0;
+      }
+      
+      .header-telephone {
+        display: none;
+       
         @media screen and (min-width: 768px) {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            position: relative;
-
-            &::after {
-                content: "";
-                position: absolute;
-                background-color: grey;
-                width: 100%;
-                height: 1px;
-                bottom: 0;
-                left: 0;
-              }
         }
-    }
+      }
+
+      .header-telephone-link {
+        font-size: 15px;
+        font-weight: 400;
+        font-family: $fontFamily2;
+        color: $Color4;
+      }
+      .header-telephone-title{
+        font-size: 15px;
+        color: $Color4;
+        font-family: $fontFamily2;
+      }
+
+}
+header{
+    
     .logo {
-        width: 100%;
-        max-width: 142px;
+        width: 150px;
+        height: 80px;
+        object-fit: cover;
     }
 
     .hero-logos {
