--- a/sass/_heroexclusive.scss
+++ b/sass/_heroexclusive.scss
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 50vh;
+    height: 360px;
     margin-bottom: 70px;
     background-attachment: fixed;
 
