--- a/sass/_neighborhood.scss
+++ b/sass/_neighborhood.scss
@@ -3,7 +3,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 50vh;
+    height: 360px;
     margin-bottom: 70px;
     background-attachment: fixed;
 }
@@ -19,7 +19,7 @@
         gap: 10px;
     }
 
-    .neihborhood-item{
+    .neighborhood-item{
         background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('../images/listing.jpg');
         background-position: center;
         background-repeat: no-repeat;
