changes for font sizes

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -17,7 +17,6 @@
   @media screen and (min-width: 1366px) {
     background-position: 649px 0;
     height: 145vh;
-    
   }
 
   @media screen and (min-width: 1400px) {
@@ -86,6 +85,7 @@
       @media screen and (min-width: 768px) {
         width: 100%;
         max-width: 293px;
+        font-size: 15px;
       }
     }
     .about-read-more {
