--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,7 @@ header .hero-wrapper {
   .about .about-container .about-caption {
     width: 100%;
     max-width: 293px;
+    font-size: 15px;
   }
 }
 
@@ -756,6 +757,7 @@ header .hero-wrapper {
 @media screen and (min-width: 768px) {
   .services .service-wrapper .service-item, .services .service-wrapper p {
     margin-bottom: 22px;
+    font-size: 15px;
   }
 }
 
@@ -1104,7 +1106,7 @@ header .hero-wrapper {
 }
 
 .unparalleled .unparalleled-container .unparalleled-bold-caption {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   font-family: "Yeseva One", cursive;
   line-height: 1.4;
@@ -1112,7 +1114,7 @@ header .hero-wrapper {
 }
 
 .unparalleled .unparalleled-container .unparalleled-normal-caption {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   line-height: 2;
   font-family: "Montserrat", sans-serif;
@@ -1129,11 +1131,17 @@ header .hero-wrapper {
 }
 
 .unparalleled .unparalleled-container .broker-caption {
-  font-size: 13px;
+  font-size: 15px;
   font-weight: 400;
   font-family: "Montserrat", sans-serif;
   margin-bottom: 20px;
   color: rgba(0, 0, 0, 0.75);
+}
+
+@media screen and (min-width: 768px) {
+  .unparalleled .unparalleled-container .broker-caption {
+    font-size: 15px;
+  }
 }
 
 .about-parallax {
