--- a/sass/_aboutpage.scss
+++ b/sass/_aboutpage.scss
@@ -48,7 +48,6 @@
         gap: 94px;
 
        }
-
         .unparalleled-column-wrap{
             flex: 1;
         }
@@ -61,14 +60,14 @@
         margin-bottom: 18px;
       }
       .unparalleled-bold-caption {
-        font-size: 14px;
+        font-size: 15px;
         font-weight: 400;
         font-family: $fontFamily;
         line-height: 1.4;
         margin-bottom: 18px;
         }
         .unparalleled-normal-caption {
-            font-size: 14px;
+            font-size: 15px;
             font-weight: 400;
             line-height: 2;
             font-family: $fontFamily2;
@@ -84,11 +83,15 @@
             margin-bottom: 10px;
           }
           .broker-caption {
-            font-size: 13px;
+            font-size: 15px;
             font-weight: 400;
             font-family: $fontFamily2;
             margin-bottom: 20px;
             color: $Color4;
+
+            @media screen and (min-width: 768px) {
+              font-size: 15px;
+            }
           }
       }
 
