--- a/sass/_service.scss
+++ b/sass/_service.scss
@@ -70,6 +70,7 @@
 
             @media screen and(min-width: 768px) {
             margin-bottom: 22px;
+            font-size: 15px;
               
             }
           }
