--- a/sass/_heroexclusive.scss
+++ b/sass/_heroexclusive.scss
@@ -72,6 +72,11 @@
     left: 0;
   }
 }
+.exclusive-img {
+  height: 240px;
+  width: 100%;
+  object-fit: cover;
+}
 
 .exclusive-item-title {
         font-size: 23px;
