--- a/sass/_aboutpage.scss
+++ b/sass/_aboutpage.scss
@@ -21,20 +21,20 @@
         font-size: 35px;
         line-height: 1;
         font-family: $fontFamily;
-        // display: block;
-        // position: relative;
+        display: block;
+        position: relative;
         margin-bottom: 90px;
 
-        // &::after {
-        //     content: "";
-        //     position: absolute;
-        //     background-color: grey;
-        //     width: 50px;
-        //     height: 2px;
-        //     bottom: -17px;
-        //     left: 100px;
+        &::after {
+            content: "";
+            position: absolute;
+            background-color: grey;
+            width: 50px;
+            height: 2px;
+            bottom: -17px;
+            left: 100px;
             
-        // }
+        }
 }
 }
 
@@ -179,13 +179,13 @@
 
         
         @media screen and (min-width: 1024px) {
-            font-size: 65px;
+            font-size: 60px;
         }
 
         &::after {
             content: "";
             position: absolute;
-            background-color: $Color3;
+            background-color:#f4e0e0;
             width: 100%;
             height: 1px;
             bottom: -60px;
@@ -221,7 +221,7 @@
           }
 
           .estbalished-caption {
-            font-size: 14px;
+            font-size: 15px;
             font-weight: 400;
             font-family: $fontFamily2;
             line-height: 2;
